refactor: Localize game to Persian
Updates game title, description, and UI elements to Persian. Also adjusts text direction and font for better compatibility with the Persian language.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="theme-color" content="#ff9966" />
-    <meta name="description" content="A 3D tower stacking game with a Persian visual theme." />
-    <title>Isfahan Stack</title>
+    <meta name="description" content="بازی برج‌سازی سه‌بعدی با تم ایرانی." />
+    <title>برج‌ساز</title>
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
